2019-02-22  NIIBE Yutaka  <gniibe@fsij.org>

	* src/gnuk.h (EV_*): Change the values.

	* src/usb-ccid.c (GPG_ACK_TIMEOUT): New.
	(ccid_thread): Implement timout for the user interaction.

2019-02-21  NIIBE Yutaka  <gniibe@fsij.org>

	* GNUK_USB_DEVICE_ID: Add 1209:2440.

2018-12-26  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.2.13.

2018-12-22  Peter Lebbing <peter@digitalbrains.com>

	* src/main.c (device_initialize_once): Fill the stack address and
	reset vector of Gnuk application (was the one of old SYS).
	Reset the board after updating the first five pages of flash.

2018-12-21  Peter Lebbing <peter@digitalbrains.com>

	* src/main.c [DFU_SUPPORT] (flash_write_any): New.
	(device_initialize_once): Overwrite DFU bootloader by SYS.
	(main): Use SYS at ORIGIN_REAL.

	* src/stdaln-sys.ld.in: New.

	* src/Makefile [USE_DFU] (OBJS_ADD): Add standalone SYS object.
	Add rules for stdaln-sys-bin.o and src/stdaln-sys.ld.

	* src/configure: Generate stdaln-sys.ld.
	[MAPLE_MINI]: Tweak ORIGIN and FLASH_SIZE.
	(ORIGIN_DEFINE, ORIGIN_REAL_DEFINE): New macros.
	(USE_DFU): New make variable.

	* src/config.h.in (ORIGIN_DEFINE, ORIGIN_REAL_DEFINE): New.

2018-12-20  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx: Update to 1.13.

2018-12-07  NIIBE Yutaka  <gniibe@fsij.org>

	* src/gnuk.h (EV_EXEC_ACK_REQUIRED): Have precedence
	than EV_EXEC_FINISHED.

2018-12-06  NIIBE Yutaka  <gniibe@fsij.org>

	* src/usb-ccid.c (ccid_thread): Priority of handling
	EV_TX_FINISHED is most important.  Don't handle
	Ack button event when c->tx_busy = 1.

2018-12-05  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_external_authenticate): Support
	ACK button for firmware update.

2018-12-04  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (gpg_data_copy): Fix for NR_DO_UIF_SIG.

2018-11-25  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.2.12.

2018-11-21  NIIBE Yutaka  <gniibe@fsij.org>

	* src/usb-ccid.c (ccid_thread): Fix a race condition sending